Issue 19951: **Variable definition shouldn't scroll Issue 19952: **No way to show a definition for a source in the variable selector Issue 19948: **Font getting cut off vertically for "Source" and "Variable" labels in variable selector

--- a/app/Connector/packages/connector-theme/sass/var/Component.scss
+++ b/app/Connector/packages/connector-theme/sass/var/Component.scss
@@ -217,6 +217,10 @@ li.fadein {
     background-color: $secondary-color;
     box-shadow: none;
 
+    .x-panel-header-body {
+      padding-top: 5px;
+    }
+
     .x-header-text {
       color: $dark-color;
       font-weight: normal;
@@ -1800,4 +1804,17 @@ div.study-treatments {
   font-family: $info-font;
   font-size: 12pt;
   color: $heat-scale-1;
+}
+
+div.definition-overflow
+{
+  display:inline-block;
+  -ms-filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0,startColor=0,endColoStr=$secondary-color);
+  background-image: -webkit-gradient(linear,left top,left bottom,from(rgba(255, 255, 255, 0)),to($secondary-color));
+  background-image: -moz-linear-gradient(top center,rgba(255, 255, 255, 0) 20%,$secondary-color 95%);
+  bottom: 0;
+  filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0,startColor=0,endColorStr=$secondary-color);
+  height: 40px;
+  position: absolute;
+  width: 100%;
 }
